$Id$

version ? (??/??/????):

  - fixed summary on customer search results list (alec)
  - fix in NetworkRemap() function for empty destination network (alec)

version 1.6.5 Druhin (28/10/2005):

  - BTS#0000450: fixed %DNS2 in lms-mgc (alec)
  - BTS#0000451: lms-rtparser uses also CC: header to get queue ID (alec)
  - BTS#0000453: fixed problem with discount in lms-payments and 
    lmsd/payments (alec)
  - fixed 'New' link in usernodesbox.html called from '?m=useredit' (alec)
  - fixed summary description on balance list printout (alec)
  - lmsd/dhcp: fixed public IP's problem - using hostnames with suffix 
    "_pub" (alec)
  - added lost email, phone, ssn, ten on customers list printout (alec)

version 1.6.4 Mala (25/09/2005):

  - BTS#0000426: fixed value in contrib/formularz_przelewu_wplaty (alec)
  - BTS#0000428: fixed misprint in polish translation (alec)
  - BTS#0000420: fixed tax/net calculations in Sale Registry (alec)
  - added support for Userpanel configuration (alec)
  - invoice items are sorted by item id (alec)
  - public IP checking when filtering customers list by network (alec)
  - BTS#0000447: lmsd/dhcp: added support for public IP addresses (alec)
  - lmsd: fixed 'make' usage for non-linux systems (alec)

version 1.6.3 Laira <security release> (19/08/2005):

  - BTS#0000421: fixed icon and description in Nodes -> Print (alec)
  - BTS#0000422: fixed js function CheckAll() (alec)
  - lmsd/cutoff: fixed date in warning (alec/Tomek Rydzynski)
  - lmsd/pinger: increased MAXIFN (max interfaces number) to 1024 (alec)
  - BTS#0000423: fixed date change links on events list (alec)
  - security bugfix: plain text passwords aren't stored in session (alec)
  - security bugfix: session is excluded from database backup (alec)
      
version 1.6.2 Desala (09/08/2005):

  - fixed SQL query in Mailing with network filtering (alec)
  - BTS#0000407: fixed page number saving in netdevices list (alec/MadMark)
  - fixed payment day on Payment Info (alec)